--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "ionic-toast": "~0.2.0",
-    "angular-messages": "~1.5.0"
+    "angular-messages": "~1.5.0",
+    "ngCordova": "~0.1.24-alpha"
   }
 }
